Chamber/css/base.css
:root {
  --main-background-color: #FFFFFF;
  --main-text-color: #060606;
  --header-footer-background-color: #03045E;
  --header-footer-text-color: #FFFFFF;
  --header-heading-color: #FFFFFF;
  --nav-background-color: #064E40;
  --nav-text-color: #FFFFFF;
  --nav-hover-background-color: #03045E;
  --heading-background-color: #6EB43F;
  --experimental: #F05670;
  --heading-text-color: #060606;
  --font-family: "Montserrat", sans-serif;
}

body {
  background-color: var(--header-footer-background-color);
  /* background: radial-gradient(#03045E, rgba(37, 59, 83, 0.9)); */
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  line-height: 1.5rem;
}

.banner {
  text-align: center;
  background-color: #03045E;
  margin: 0 auto;
  padding: 0.5em;
  max-width: 100vw;
}

.banner p {
  color: #F3E30A;
}

header {
  display: grid;
  grid-template-columns: 2fr 3fr 2fr;
  /* padding: 1em; */
  align-items: center;
  background-color: var(--header-footer-background-color);
  color: var(--header-footer-text-color);
}

header,
main,
footer {
  max-width: 100vw;
  margin: 0 auto;
  /* padding: 1vw; */
}

header h1 {
  font-size: 1.2rem;
  line-height: 1.5rem;
}

header h2 {
  grid-column: 1;
  grid-row: 2;
  font-size: 0.8rem;
  line-height: 1rem;
}

h1,
h2,
h3 {
  text-align: center;
}

h3 {
  padding: 0.25em;
}

.sclogo {
  width: 50px;
  margin: 0.7em;
  grid-column: 1/2;
  grid-row: 1;
}

.chamber-name {
  grid-column: 2/3;
  margin-right: 1em;
  align-self: center;
  line-height: 1.2;
}

.social {
  grid-column: 3/4;
  margin: 20px;
}

.social img {
  width: 25px;
}

#aside {
  /* background-color: #6EB43F; */
  background-color: #6EB43F;
  grid-column: 1/4;
  text-align: center;
  color: #000;
  font-weight: 700;
  max-height: 1.5rem;
}

nav button {
  margin: 0.2rem 2vw;
  background: transparent;
  border: none;
  font-size: 1.2rem;
  color: #6EB43F;
}

nav {
  background-color: #03045E;
  grid-column: 1/5;
}

nav ul {
  display: flex;
  justify-content: center;
  list-style-type: none;
  padding: 0;
  margin: 0px;
}

nav ul li a {
  display: block;
  padding: 0.8rem 2vw;
  text-decoration: none;
  text-align: center;
  color: #FFFFFF;
  border-top: 1px solid rgba(0, 0, 0, 0.3);
}

nav ul li.active a {
  background-color: rgba(0, 0, 0, 0.2);
  color: #FFFFFF;
}

nav ul li a:hover {
  background-color: #6EB43F;
  color: var(--nav-text-color);
}

nav ul {
  display: none;
}

nav ul.open {
  display: block;
}

#hamButton span:nth-child(1) {
  display: block;
}

#hamButton span:nth-child(2) {
  display: none;
}

#hamButton.open span:nth-child(1) {
  display: none;
}

#hamButton.open span:nth-child(2) {
  display: block;
}

main {
  display: grid;
  grid-gap: 1em;
  color: #FFFFFF;
}

main div {
  background-color: #03045E;
  text-align: center;
}

.hero {
  position: relative;
  text-align: center;
  background-color: transparent;
}

.hero h2 strong {
  font-size: 1rem;
}

.hero h2 {
  color: #6EB43F;
  background-color: #064E40;
  position: absolute;
  top: 10px;
  left: 20px;
  padding: 1rem;
  border-radius: 8px;
}

.hero img {
  width: 100%;
}

a.joinButton {
  background-color: #064E40;
  color:#6EB43F;
  font-size: 1.3rem;
  font-weight: 700;
  padding: 10px 15px;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  position: absolute;
  bottom: 40px;
  right: 15px;
  border-radius: 8px;
  margin-right: 2%;
}

a.join2Button {
  background-color: #064E40;
  color:#6EB43F ;
  padding: 10px 15px;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  border-radius: 8px;
  margin-top: 15px;
  font-size: 16px;
  font-weight: 700;
}

a.joinButton:hover {
  background-color: #6EB43F;
  font-size: 1.3rem;
  font-weight: 700;
  color: #000;
  box-shadow: 0px 6px 5px #000;
}

a.join2Button:hover {
  background-color: #6EB43F;
  font-size: 16px;
  font-weight: 700;
  box-shadow: 0px 6px 5px #000;
}

h2 {
  color: #6EB43F;
}

.event {
  text-align: center;
  padding-bottom: 2em;
  padding: 1em;
  width: 100%;
  border: solid rgba(37, 59, 83, 0.8);
}

#more-info {
  color: #6EB43F;
  text-decoration: none;
}

.weather {
  width: 300px;
  justify-self: center;
  padding: 0.5em;
}

a.link:hover {
  color: #fff;
}

#current-temp, .ctemp {
  font-size: 2rem;
  font-weight: 700;
  color: #6EB43F;
}

.weather img {
  margin-left: 1em;
  float: left;
}

.weather hr {
  height: 0.3rem;
  border: none;
  margin-top: 0;
  background-color: rgba(37, 59, 83, 0.8);
}

a {
  color:#6EB43F;
  font-size: 0.8rem;
  line-height: 1rem;
  text-decoration: none;
}

a:hover {
  color: #000;
  font-size: 0.8rem;
  text-decoration: none;
  box-shadow: 0px 6px 5px #000;
}

.join {
  border-top: solid rgba(37, 59, 83, 0.8);
}

.news {
  border: solid rgba(37, 59, 83, 0.8);
}

.spot2 {
  border-left: solid rgba(37, 59, 83, 0.8);
}

.news p {
  padding: 1.5em;
}

.spotlights {
  display:grid;
  grid-template-columns: 1fr;
  background: var(--header-footer-background-color);
}

.spotlights a {
  margin-left: 2em;
}

.spot1 {
  grid-row: 1/2;
  padding: 0.5em;
}

.spot2 {
  grid-row: 2/3;
  padding: 0.5em;
}

.spot3 {
  display: none;
}

.contact1,
.contact2,
.contact3 {
  padding: 0.5em;
  background-color: #fff;
  border-radius: 15px;
  border: solid rgba(37, 59, 83, 0.8);
  box-shadow: 0px 6px 5px #000;
  color: #000;
}

a.contact {
  color:#000;
  font-size: 0.8rem;
  line-height: 1rem;
  text-decoration: none;
}

a.contact:hover {
  color: #000;
  font-size: 0.8rem;
  text-decoration: none;
  box-shadow: 0px 6px 5px #000;
}

p.contact {
  text-align: center;
}

footer h1 {
  text-align: center;
}

.address p:first-child {
  font-size: 1.2rem;
  color: #6EB43F;
}

footer {
  background-color: var(--header-footer-background-color);
  display: grid;
  align-items: center;
  justify-content: space-around;
  padding: 1rem;
  text-align: center;
  color: #fff;
}

#hr-1 {
  height: 2rem;
  border: none;
  margin-top: 0;
  margin-bottom: 0;
  background-color: #064E40;
}
/* ... */

